--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="./style.css"  
       type="text/css"
     />
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="script.js" defer></script>
     <script type="text/javascript" src="imgfile.json"></script>
   </head>
   <body>
