Final Commit-Bug Fixes

--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
     <script type="text/javascript" src="imgfile.json"></script>
   </head>
   <body>
-    <div class="float-container">
+    <div class="float-container" id="floatcontainer">
       <div class="float-child" id="floatimagelist">
-        <div class="imagelist"></div>
+        <div class="imagelist"><div class="imagelogo"></div></div>
       </div>
-      <div class="float-child">
+      <div class="float-child" id="imagecontent">
         <div class="imagedisplay"></div>
         <div class="float-child" id="floattextbox">
           <div class="textbox" contentEditable="true" id="textboxid"></div>
         </div>
       </div>
     </div>
-  </div>
   </body>
 </html>
