Final Commit-Responsive Behaviour

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="imgfile.json"></script>
   </head>
   <body>
-    <div class="float-container" id="floatcontainer">
+    <div class="float-container" id="floatingcontainer">
       <div class="float-child" id="floatimagelist">
         <div class="imagelist"><div class="imagelogo"></div></div>
       </div>
